# Excal

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp  modelViewer.cpp  modelViewer.h  perlin.h  terrainGenerator.cpp  terrainGenerator.h
models/: helmet.mtl
shaders/: shader.frag  shader.vert  terrainShader.frag  terrainShader.vert
src/: buffer.cpp  buffer.h  camera.cpp  camera.h  context.cpp  context.h  debug.cpp  debug.h  descriptor.cpp  descriptor.h  device.cpp  device.h  engine.cpp  engine.h  excalInfoStructs.h  frame.cpp  frame.h  image.cpp  image.h  light.cpp  light.h  main.cpp  model.cpp  model.h  pipeline.cpp  pipeline.h  structs.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h  utils.cpp  utils.h
